[package]
name = "type-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
log = "0.4.14"
env_logger = "0.9.0"
rslint_parser = "0.3.1"
rslint_rowan = "0.10.0"
rslint_errors = "0.2.0"
rslint_core = "0.3.0"